<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CreateAccountActivity"
    android:orientation="vertical"
    android:background="@color/backgroud_gray">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_criar_conta"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/name"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/phone"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefone"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/birthDate"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data_de_nascimento"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"/>


    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:background="@color/teal_700"
        android:text="@string/criar_conta"/>

</LinearLayout>