<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_gray"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/pratica_v_qualidade_de_software"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:background="@color/teal_700"
        android:text="@string/criar_conta_corrente" />

    <Button
        android:id="@+id/btnMenuDeposit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:background="@color/teal_700"
        android:text="@string/depositar_na_conta" />

    <Button
        android:id="@+id/btnWithdraw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:background="@color/teal_700"
        android:text="@string/sacar_de_uma_conta" />

    <Button
        android:id="@+id/btnBalanceCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:background="@color/teal_700"
        android:text="@string/consultar_saldo_de_uma_conta" />

</LinearLayout>