<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DepositActivity"
    android:orientation="vertical"
    android:background="@color/backgroud_gray">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/dep_sito"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_a_ser_depositado"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/DepositValue"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:hint="@string/valor"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnDeposit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:background="@color/teal_700"
        android:text="@string/depositar"/>



</LinearLayout>