<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BalanceCheckActivity"
    android:background="@color/backgroud_gray">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/consulta_saldo"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btnDeposit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:background="@color/teal_700"
        android:text="@string/mostre_meu_saldo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/seu_saldo_de"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_marginLeft="10dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>


</LinearLayout>